--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favi.png" rel="icon">
+  <link href="assets/img/logosi.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -41,7 +41,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
-      <img src="assets/img/Logo.png" height="100px" width="100px">
+      <img src="assets/img/Logosi.png" height="100px" width="100px">
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
