--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
-      <img src="assets/img/Logosi.png" height="100px" width="100px">
+      <img src="assets/img/logosi.png" height="100px" width="100px">
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
