--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Colchoneria y hogar cordoba</title>
+  <title>Colchones y hogar cordoba</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -60,13 +60,12 @@
          
           <li class="dropdown" ><a href=""><span>Categorias</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="https://colchonesyhogarcordoba.com/">Conjuntos sommier</a></li>
-              <li><a href="https://colchonesyhogarcordoba.com/">Respaldos</a></li>
-              <li><a href="https://colchonesyhogarcordoba.com/">Sillones</a></li>
-              <li><a href="https://colchonesyhogarcordoba.com/">Sabanas y acolchados</a></li>
-              <li><a href="https://colchonesyhogarcordoba.com/">Placares</a></li>
-              <li><a href="https://colchonesyhogarcordoba.com/">Mesas y Escritorios</a></li>
-              <li><a href="https://colchonesyhogarcordoba.com/">Colchones</a></li>
+              <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/conjuntos-somier/">Conjuntos sommier</a></li>
+              <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/respaldos/">Respaldos</a></li>
+              <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/sillon/">Sillones</a></li>
+              <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/ropa-de-cama/">Sabanas y acolchados</a></li>
+              <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/mesas-y-escritorios/">Mesas y Escritorios</a></li>
+              <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/colchones/">Colchones</a></li>
             </ul>
           </li>
           <li><a href="index.html#contact">Contacto</a></li>
@@ -248,7 +247,7 @@
                 <h4></h4>
                 <p></p>
                 <a href="assets/img/53.jpeg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://colchonesyhogarcordoba.com/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://colchonesyhogarcordoba.com/index.php/product/conjunto-queen-size/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -260,7 +259,7 @@
                   <h4></h4>
                   <p></p>
                   <a href="assets/img/100.jpeg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://colchonesyhogarcordoba.com/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="https://colchonesyhogarcordoba.com/index.php/product/conjunto-queen-size-2/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div><!-- End Portfolio Item -->
 
@@ -270,7 +269,7 @@
                 <h4></h4>
                 <p></p>
                 <a href="assets/img/64.jpeg"  data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://colchonesyhogarcordoba.com/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://colchonesyhogarcordoba.com/index.php/product/sillon-tres-cuerpos-banqueta/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -280,7 +279,7 @@
                 <h4></h4>
                 <p></p>
                 <a href="assets/img/70.jpeg"  data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://colchonesyhogarcordoba.com/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://colchonesyhogarcordoba.com/index.php/product/mesa-cuadrada-8-sillas/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -290,7 +289,7 @@
                 <h4></h4>
                 <p></p>
                 <a href="assets/img/38.jpeg"  data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://colchonesyhogarcordoba.com/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://colchonesyhogarcordoba.com/index.php/product/conjunto-super-king/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -300,7 +299,7 @@
                 <h4></h4>
                 <p></p>
                 <a href="assets/img/65.jpeg"  data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://colchonesyhogarcordoba.com/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://colchonesyhogarcordoba.com/index.php/product/sillon-esquinero-premium/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -310,7 +309,7 @@
                 <h4></h4>
                 <p></p>
                 <a href="assets/img/75.jpeg"  data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="https://colchonesyhogarcordoba.com/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://colchonesyhogarcordoba.com/index.php/product/conjunto-2-plazas/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
