--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="https://colchonesyhogarcordoba.com/">Tienda Online</a>
+      <a class="btn-getstarted" href="https://colchonesyhogarcordoba.com/">Tienda de Ofertas</a>
 
     </div>
   </header>
@@ -89,7 +89,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="assets/img/banerrs.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/Interiordesign.jpg" alt="" data-aos="fade-in">
 
       <div class="container">
         <div class="row">
@@ -132,7 +132,7 @@
             <h3>Nosotros</h3>
             <h2>¿Por qué elegirnos?</h2>
             <p>Somos un equipo de soñadores comprometidos con mejorar la calidad de vida de nuestros clientes. Nos dedicamos a proporcionar el máximo confort y a cuidar de su salud, ofreciendo precios accesibles. Para nuestro equipo, la satisfacción y el bienestar de nuestros clientes son siempre nuestra prioridad.</p>
-            <a href="https://colchonesyhogarcordoba.com/" class="read-more"><span>Tienda Online</span><i class="bi bi-arrow-right"></i></a>
+            <a href="https://colchonesyhogarcordoba.com/" class="read-more"><span>Tienda de Ofertas</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
           <div class="col-xl-7">
@@ -435,7 +435,7 @@
               <h3>Conocé todos nuestros productos!</h3>
               <br>
               <p>Ingresa a nuestro catalogo y disfrutá de las promociones exclusivas que tenemos para vos.</p>
-              <a class="cta-btn" href="https://colchonesyhogarcordoba.com/">Tienda Online</a>
+              <a class="cta-btn" href="https://colchonesyhogarcordoba.com/">Tienda de Ofertas</a>
             </div>
           </div>
         </div>
