--- a/index.html
+++ b/index.html
@@ -86,18 +86,22 @@
 
  <main class="main">
 
-    <!-- Hero Section -->
+   <!-- Hero Section -->
     <section id="heroCarousel" class="hero carousel slide" data-bs-ride="carousel">
         
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="assets/img/Interiordesign.jpg" class="d-block w-100" alt="Imagen 1">
                 <div class="carousel-caption">
-                    
+                    <h2>Título de la Primera Imagen</h2>
+                    <p>Descripción de la primera imagen.</p>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="assets/img/banerrs.jpg" class="d-block w-100" alt="Imagen 2">
+                <img src="assets/img/Interiordesign.jpg" class="d-block w-100" alt="Imagen 2">
                 <div class="carousel-caption">
+                    <h2>Título de la Segunda Imagen</h2>
+                    <p>Descripción de la segunda imagen.</p>
                 </div>
             </div>
         </div>
@@ -112,6 +116,7 @@
         </button>
 
     </section><!-- /Hero Section -->
+
 
     <!-- Clients Section -->
     <section id="clients" class="clients section">
