--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="keywords" content="colchones, hogar, muebles, Córdoba, descanso, tienda de colchones, confort, camas, almohadas, somieres, colchones ortopédicos, colchones de espuma, colchones de resortes, colchones de látex, descanso reparador, artículos para el hogar, decoración, ropa de cama, sábanas, fundas, edredones, venta de colchones, colchones en oferta, confort en el hogar, dormitorio, productos para el hogar, confort garantizado, salud y bienestar, colchones de calidad, colchones premium, tiendas en Córdoba, confort para dormir, confort nocturno, camas dobles, camas matrimoniales, camas individuales, entrega a domicilio, muebles de dormitorio, venta online de colchones, tienda en línea, colchones con garantía, salud en el descanso, bienestar, colchones económicos, colchones de lujo, almohadas ergonómicas, almohadas de viscoelástica, mobiliario para el hogar, productos de descanso, somieres eléctricos, bases tapizadas, muebles en Córdoba, precios de colchones, tiendas de muebles, muebles de calidad, descanso de calidad, salud y confort, colchones confortables, colchones recomendados, colchones suaves, colchones firmes, colchones con memoria, venta de camas, mobiliario de dormitorio, sillas para el hogar, sofás, tapicería, colchones viscoelásticos, colchones híbridos, confort nocturno, tiendas de descanso, promociones de colchones, ofertas de colchones, muebles de sala, muebles de comedor, confort para toda la familia, colchones anatómicos, colchones plegables, camas plegables, camas articuladas, camas de hospital, descanso a medida, tienda de descanso, camas con cabeceros, bases para camas, soluciones de descanso, bienestar familiar, relax en casa, tienda de colchones Córdoba, entrega inmediata, tienda de muebles Córdoba, equipamiento para el hogar, relax y confort, sillas y sillones, mobiliario de confort, diseño de interiores, decoración de dormitorios">
 
   <!-- Favicons -->
-  <link href="assets/img/logosi.png" rel="icon">
-  <link href="assets/img/logosi.png" rel="apple-touch-icon">
+  <link href="assets/img/logon.png" rel="icon">
+  <link href="assets/img/logon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -52,7 +52,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <header id="header" class="header d-flex align-items-center fixed-top">
     
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
-      <img src="assets/img/logosi.png" height="100px" width="100px">
+      <img src="assets/img/logon.png" height="100px" width="100px">
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
