--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
   <!-- =======================================================
   * Template Name: Append
   * Template URL: https://bootstrapmade.com/append-bootstrap-website-template/
@@ -87,7 +87,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="https://colchonesyhogarcordoba.com/index.php/product-category/promos-mama/">Tienda de Ofertas</a>
+      <a class="btn-getstarted" href="https://colchonesyhogarcordoba.com/">Tienda de Ofertas</a>
 
     </div>
   </header>
@@ -98,7 +98,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <section id="heroCarousel" class="hero carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
       <div class="carousel-item active">
-          <a href="https://colchonesyhogarcordoba.com/index.php/product-category/promos-mama/">
+          <a href="https://colchonesyhogarcordoba.com/">
               <img src="assets/img/Interiordesign.jpg" class="d-block w-100 hero-img" alt="Imagen 1">
           </a>
           <div class="carousel-caption">
@@ -107,7 +107,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
       </div>
       <div class="carousel-item">
-          <a href="https://colchonesyhogarcordoba.com/index.php/product-category/promos-mama/">
+          <a href="https://colchonesyhogarcordoba.com/">
               <img src="assets/img/Interiordesign.jpg" class="d-block w-100 hero-img" alt="Imagen 2">
           </a>
           <div class="carousel-caption">
@@ -688,7 +688,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             
             <a href="https://www.facebook.com/ColchonesyhogarCordobaOficial"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/colchonesyhogarcordobaoficial/"><i class="bi bi-instagram"></i></a>
-            
+            <a href="https://www.tiktok.com/@colchonesyhogarcordoba"><i class="bi bi-tiktok"></i></a> <!-- Enlace de TikTok -->
           </div>
         </div>
 
