--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="https://colchonesyhogarcordoba.com/index.php/product-category/promos-mama/">Tienda de Ofertas</a>
+      <a class="btn-getstarted" href="https://colchonesyhogarcordoba.com/">Tienda de Ofertas</a>
 
     </div>
   </header>
@@ -100,7 +100,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <section id="heroCarousel" class="hero carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
       <div class="carousel-item active">
-          <a href="https://colchonesyhogarcordoba.com/index.php/product-category/promos-mama/">
+          <a href="https://colchonesyhogarcordoba.com/">
               <img src="assets/img/cyberm.jpeg" class="d-block w-100 hero-img" alt="Imagen 1">
           </a>
           <div class="carousel-caption">
@@ -109,7 +109,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
       </div>
       <div class="carousel-item">
-          <a href="https://colchonesyhogarcordoba.com/index.php/product-category/promos-mama/">
+          <a href="https://colchonesyhogarcordoba.com/">
               <img src="assets/img/colchoneslogos.jpg" class="d-block w-100 hero-img" alt="Imagen 2">
           </a>
           <div class="carousel-caption">
@@ -369,7 +369,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <h3>Nosotros</h3>
             <h2>¿Por qué elegirnos?</h2>
             <p>Somos un equipo de soñadores comprometidos con mejorar la calidad de vida de nuestros clientes. Nos dedicamos a proporcionar el máximo confort y a cuidar de su salud, ofreciendo precios accesibles. Para nuestro equipo, la satisfacción y el bienestar de nuestros clientes son siempre nuestra prioridad.</p>
-            <a href="https://colchonesyhogarcordoba.com/index.php/product-category/promos-mama/" class="read-more"><span>Tienda de Ofertas</span><i class="bi bi-arrow-right"></i></a>
+            <a href="https://colchonesyhogarcordoba.com/" class="read-more"><span>Tienda de Ofertas</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
           <div class="col-xl-7">
