--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <section id="heroCarousel" class="hero carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
       <div class="carousel-item active">
-          <a href="https://colchonesyhogarcordoba.com/">
+          <a href="https://colchonesyhogarcordoba.com/index.php/product-category/promos-de-enamorados/">
               <img src="assets/img/Enamorados.png" class="d-block w-100 hero-img" alt="Imagen 1">
           </a>
           <div class="carousel-caption">
