--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Categorias</h2>
+        <h2>Categorías</h2>
         <p>Conoce Nuestras categorías</p>
       </div><!-- End Section Title -->
 
@@ -274,7 +274,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="icon-box">
                   <i class="bi bi-clipboard-pulse"></i>
                   <h3>Envíos</h3>
-                  <p>Llegamos a todo el país, gratis a toda la ciudad de Córdoba.
+                  <p>Llegamos a todo el país, gratis a toda la ciudad de Córdoba!
                   </p>
                 </div>
               </div> <!-- End Icon Box -->
@@ -282,15 +282,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box">
                   <i class="bi bi-command"></i>
-                  <h3>Productos con garantia</h3>
-                  <p>Todos nuestros productos tienen garantia de fabrica.</p>
+                  <h3>Productos con garantía</h3>
+                  <p>Todos nuestros productos tienen garantía de fábrica.</p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="icon-box">
                   <i class="bi bi-graph-up-arrow"></i>
-                  <h3>Cobro al recibir la mercaderia</h3>
+                  <h3>Cobro al recibir la mercadería</h3>
                   <p>Paga tu compra al recibirla en casa, ya sea en efectivo o con cualquier tarjeta.</p>
                 </div>
               </div> <!-- End Icon Box -->
@@ -380,7 +380,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3><span class="num">3.</span> <span>Cómo funcionan los envíos gratuitos?</span></h3>
+                <h3><span class="num">3.</span> <span>¿Cómo funcionan los envíos gratuitos?</span></h3>
                 <div class="faq-content">
                   <p>"Si vivís en la ciudad de Córdoba, recibe tu producto con envío completamente gratuito en la puerta de tu casa."</p>
                 </div>
@@ -388,7 +388,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3><span class="num">4.</span> <span>Donde esta ubicado el local?</span></h3>
+                <h3><span class="num">4.</span> <span>¿Dónde está ubicado el local?</span></h3>
                 <div class="faq-content">
                   <p>"Nuestra ubicación es en Avenida Armada Argentina 705, en el barrio Parque Horizonte, en Córdoba Capital, Argentina."</p>
                 </div>
@@ -426,7 +426,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="text-center">
               <h3>Conocé todos nuestros productos!</h3>
               <br>
-              <p>Ingresa a nuestro catalogo y disfrutá de las promociones exclusivas que tenemos para vos.</p>
+              <p>Ingresa a nuestro catálogo y disfrutá de las promociones exclusivas que tenemos para vos.</p>
               <a class="cta-btn" href="https://colchonesyhogarcordoba.com/">Tienda de Ofertas</a>
             </div>
           </div>
@@ -458,7 +458,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contactanos</h2>
-        <p>Aca vas a tener toda la informacion disponible para que puedas conectarte con nosotros.</p>
+        <p>Acá vas a tener toda la información disponible para que puedas conectarte con nosotros.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -473,7 +473,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <i class="bi bi-geo-alt"></i>
                   <h3>Ubicación</h3>
                   <p>Av. Armada Argentina, 705</p>
-                  <p>Cordoba Capital, Argentina</p>
+                  <p>Córdoba Capital, Argentina</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -502,7 +502,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <h3>Horarios</h3>
                   <p>Lunes a Viernes</p>
                   <p>9 a 13 - 16 a 20</p>
-                  <p>Sabados</p>
+                  <p>Sábados</p>
                   <p>9 a 13</p>
                 </div>
               </div><!-- End Info Item -->
