--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
          
           <li class="dropdown" ><a href=""><span>Categorias</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/conjuntos-somier/">Conjuntos sommier</a></li>
+              <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/conjuntos-somier/">Conjuntos somier</a></li>
               <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/respaldos/">Respaldos</a></li>
               <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/sillon/">Sillones</a></li>
-              <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/ropa-de-cama/">Sabanas y acolchados</a></li>
+              <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/ropa-de-cama/">Sábanas y acolchados</a></li>
               <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/mesas-y-escritorios/">Mesas y Escritorios</a></li>
               <li><a href="https://colchonesyhogarcordoba.com/index.php/product-category/colchones/">Colchones</a></li>
             </ul>
