--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3><span class="num">4.</span> <span>¿Dónde está ubicado el local?</span></h3>
+                <h3><span class="num">4.</span> <span>¿Dónde están ubicados los locales?</span></h3>
                 <div class="faq-content">
-                  <p>"Nuestra ubicación es en Avenida Armada Argentina 705, en el barrio Parque Horizonte, en Córdoba Capital, Argentina."</p>
+                  <p>"Tenemos un local en Avenida Armada Argentina 705, en el barrio Parque Horizonte, y un segundo local abierto recientemente en Bv. Bonciolini en Manantiales II. Ambos en Córdoba Capital, Argentina."</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
@@ -471,8 +471,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="col-md-6">
                 <div class="info-item" data-aos="fade" data-aos-delay="200">
                   <i class="bi bi-geo-alt"></i>
-                  <h3>Ubicación</h3>
+                  <h3>Ubicaciones</h3>
                   <p>Av. Armada Argentina, 705</p>
+                  <p>Bv. Bonciolini en Manantiales II</p>
                   <p>Córdoba Capital, Argentina</p>
                 </div>
               </div><!-- End Info Item -->
@@ -513,8 +514,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <!-- Reemplazo del formulario por Google Maps -->
-            <iframe 
+            <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2650.047035055117!2d-64.2128946255293!3d-31.45804657424248!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a24cf8b503ab%3A0x67bf069fc03be838!2sAv.%20Armada%20Argentina%20705%2C%20X5009CMA%20C%C3%B3rdoba!5e1!3m2!1ses!2sar!4v1727298360520!5m2!1ses!2sar" 
+                width="100%" 
+                height="450" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d212.66866075497518!2d-64.2671888!3d-31.477477!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a18da03c77e1%3A0x5861bc94d1f0d4a2!2sColchones%20y%20Hogar%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1738880283155!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                 width="100%" 
                 height="450" 
                 style="border:0;" 
