--- a/index.html
+++ b/index.html
@@ -523,13 +523,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 loading="lazy" 
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d212.66866075497518!2d-64.2671888!3d-31.477477!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a18da03c77e1%3A0x5861bc94d1f0d4a2!2sColchones%20y%20Hogar%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1738880283155!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                width="100%" 
-                height="450" 
-                style="border:0;" 
-                allowfullscreen="" 
-                loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1617.169753957039!2d-64.2676629513651!3d-31.477372098455373!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a18da03c77e1%3A0x5861bc94d1f0d4a2!2sColchones%20y%20Hogar%20C%C3%B3rdoba!5e1!3m2!1ses!2sar!4v1738881004855!5m2!1ses!2sar" 
+              width="100%" 
+              height="450" 
+              style="border:0;" 
+              allowfullscreen="" 
+              loading="lazy" 
+              referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
         
