--- a/index.html
+++ b/index.html
@@ -99,8 +99,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- Hero Section -->
 <section id="heroCarousel" class="hero carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
+    <div class="carousel-item active">
+          <a href="https://colchonesyhogarcordoba.com/index.php/product-category/especial-pascua/">
+              <img src="assets/img/PascuasColchones.jpg" class="d-block w-100 hero-img" alt="Imagen 1">
+          </a>
+          <div class="carousel-caption">
+              <h2></h2>
+              <p></p>
+          </div>
+      </div>
       <div class="carousel-item active">
-          <a href="https://colchonesyhogarcordoba.com/index.php/product-category/promos-de-enamorados/">
+          <a href="https://colchonesyhogarcordoba.com/">
               <img src="assets/img/portadaoto.jpeg" class="d-block w-100 hero-img" alt="Imagen 1">
           </a>
           <div class="carousel-caption">
