--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <p></p>
           </div>
       </div>
-      <div class="carousel-item active">
+      <div class="carousel-item">
           <a href="https://colchonesyhogarcordoba.com/">
               <img src="assets/img/portadaoto.jpeg" class="d-block w-100 hero-img" alt="Imagen 1">
           </a>
