--- a/index.html
+++ b/index.html
@@ -99,7 +99,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- Hero Section -->
 <section id="heroCarousel" class="hero carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
-      <div class="carousel-item active">
+    <div class="carousel-item active">
+          <a href="https://colchonesyhogarcordoba.com/index.php/product-category/hot-sale/">
+              <img src="assets/img/Portada Hot Sale.jpg" class="d-block w-100 hero-img" alt="Imagen 1">
+          </a>
+          <div class="carousel-caption">
+              <h2></h2>
+              <p></p>
+          </div>
+      </div>
+      <div class="carousel-item">
           <a href="https://colchonesyhogarcordoba.com/">
               <img src="assets/img/Temporada otoño.jpg" class="d-block w-100 hero-img" alt="Imagen 1">
           </a>
