--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="carousel-inner">
     <div class="carousel-item active">
           <a href="https://colchonesyhogarcordoba.com/index.php/product-category/hot-sale/">
-              <img src="assets/img/Portada Hot Sale.jpg" class="d-block w-100 hero-img" alt="Imagen 1">
+              <img src="assets/img/Hotsale2.0.jpg" class="d-block w-100 hero-img" alt="Imagen 1">
           </a>
           <div class="carousel-caption">
               <h2></h2>
